update ui and add google maps

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -15,3 +15,9 @@
 .deaths {
     border: 5px solid rgb(216, 76, 11);
 }
+@media (max-width: 800px)
+{
+    .card {
+        margin: 10px 6% !important;
+    }
+}
