--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,41 +1,73 @@
 body {
-    background-color: rgb(250,250,250);
+	background-color: rgb(250, 250, 250);
 }
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 .header {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
 }
 .shen {
-    height: 150px;
-    display: block  ;
+	height: 150px;
+	display: block;
+	cursor: pointer;
 }
 .logo {
-    height: 150px;
-    position: relative;
+	height: 150px;
+	position: relative;
 }
 .covid {
-    height: 150px;
-    display: block  ;
+	height: 150px;
+	display: block;
+	cursor: pointer;
+	animation: logo 1s alternate infinite;
 }
-.khanhNoi{
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-    z-index: 1000;
-    text-decoration: none;
-    transition: 0.5s;
-    color: rgb(104, 104, 170);
+@keyframes logo {
+	0% {
+		transform: translateY(-10px);
+	}
+	100% {
+		transform: translateY(0px);
+	}
+}
+.khanhNoi {
+	position: absolute;
+	bottom: 5px;
+	right: 5px;
+	z-index: 1000;
+	text-decoration: none;
+	transition: 0.5s;
+	color: rgb(104, 104, 170);
+	animation-name: khanhnoi;
+	animation-direction: alternate;
+	animation-iteration-count: infinite;
+    animation-duration: 1s;
+    transition: 0.4s;
 }
 .khanhNoi:hover {
-    text-shadow: 0 0 1px;
-    color: rgb(74, 74, 182);
-} 
+	text-shadow: 0 0 1.5px;
+        color: rgb(4, 4, 105);
+        transform: scale(1.07);
+}
+@keyframes khanhnoi {
+	0% {
+	}
+	100% {
+		text-shadow: 0 0 1px;
+		color: rgb(74, 74, 182);
+	}
+}
+.loading {
+	width: 100%;
+	height: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
